Labatt POCM Deployment to UAT 09.16.2016/objects/Driver_Item__c.object
<CustomObject>
    <description>This custom object is used for POC Planning (Slalom Aug 2016)</description>
    <fields>
        <fullName>Item_Price__c</fullName>
        <label>Item Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Item_Spend__c</fullName>
        <label>Item Spend</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Marketing_Item__c</fullName>
        <label>Marketing Item</label>
        <referenceTo>Marketing_Item__c</referenceTo>
        <relationshipName>Marketing_Driver_Items</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>POC_Spend_Category__c</fullName>
        <label>POC Spend Category</label>
        <referenceTo>POC_Spend_Category__c</referenceTo>
        <relationshipName>Marketing_Driver_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Driver Item</label>
    <nameField>
        <displayFormat>DI-{0000}</displayFormat>
        <label>Driver Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Driver Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>